<resources>
    <string name="app_name">KuyNjajan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_wistlist">Wist List</string>
    <string name="title_profil">Profil</string>
    <string name="logo">Logo Kuy Njajan</string>
    <string name="nama">Nama Lengkap</string>
    <string name="username">Nama Akun</string>
    <string name="email">email </string>
    <string name="No_telp">No Telepon</string>
    <string name="password">Password</string>
    <string name="btn_daftar">Daftar</string>
    <string name="btn_masuk">Masuk</string>
    <string name="txt_daftar">Belum punya akun? Daftar Akun</string>
    <string name="txt_login">Sudah punya akun? Masuk Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mulai_jual">Mulai Jual</string>
    <string name="kuylapak_welcome">Ayo daftarkan tokomu untuk mulai berjualan!</string>
    <string name="mulai_pendaftaran">Mulai Pendaftaran</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="tulis_nama_toko_kamu_disini">Tulis nama toko kamu disini</string>
    <string name="lengkapi_alamat_toko_kamu_disini">Lengkapi alamat toko kamu disini</string>
    <string name="no_telepon">No. Telepon</string>
    <string name="masukkan_nomor_telepon_kamu_disini">Masukkan nomor telepon kamu disini</string>
    <string name="simpan">Daftar Toko</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="flip_kamera">Flip Kamera</string>
    <string name="kuynjajan">KuyNjajan</string>
    <string name="version_1_0">Version 1.0</string>
</resources>