<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.RegisterToko">

    <include
        android:id="@+id/include2"
        layout="@layout/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_nama_toko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/nama_toko"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <EditText
        android:id="@+id/et_nama_toko"
        android:layout_width="387dp"
        android:layout_height="45dp"
        android:hint="@string/tulis_nama_toko_kamu_disini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_nama_toko"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama_toko"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/alamat_toko"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/alamat_toko"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_nama_toko"
        app:layout_constraintTop_toBottomOf="@+id/et_nama_toko" />

    <EditText
        android:id="@+id/et_alamat_toko"
        android:layout_width="387dp"
        android:layout_height="45dp"
        android:layout_marginTop="1.5dp"
        android:hint="@string/lengkapi_alamat_toko_kamu_disini"
        app:layout_constraintStart_toStartOf="@+id/alamat_toko"
        app:layout_constraintTop_toBottomOf="@+id/alamat_toko" />

    <!--    <TextView-->
    <!--        android:id="@+id/tv_foto"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:text="Foto"-->
    <!--        android:textSize="16sp"-->
    <!--        android:textStyle="bold"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/et_alamat_toko"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/et_alamat_toko" />-->

    <!--    <EditText-->
    <!--        android:id="@+id/et_foto"-->
    <!--        android:layout_width="387dp"-->
    <!--        android:layout_height="45dp"-->
    <!--        android:layout_marginTop="1.5dp"-->
    <!--        android:hint="@string/lengkapi_alamat_toko_kamu_disini"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/tv_foto"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/tv_foto" />-->

    <TextView
        android:id="@+id/tv_notelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/no_telepon"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_alamat_toko"
        app:layout_constraintTop_toBottomOf="@+id/et_alamat_toko" />

    <EditText
        android:id="@+id/et_notelp"
        android:layout_width="387dp"
        android:layout_height="45dp"
        android:layout_marginTop="1.5dp"
        android:hint="@string/masukkan_nomor_telepon_kamu_disini"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@+id/tv_notelp"
        app:layout_constraintTop_toBottomOf="@+id/tv_notelp" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="No. Id Toko"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/et_notelp"
        app:layout_constraintTop_toBottomOf="@+id/et_notelp" />

    <EditText
        android:id="@+id/et_id"
        android:layout_width="387dp"
        android:layout_height="45dp"
        android:layout_marginTop="1.5dp"
        android:hint="Ketikkan salah satu angka dari 1-10"
        app:layout_constraintStart_toStartOf="@+id/tv_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_id" />

    <Button
        android:id="@+id/btn_simpan_toko"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="13dp"
        android:text="@string/simpan"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>